--- a/contact.html
+++ b/contact.html
@@ -85,18 +85,8 @@
               </div>
               <div class="card-block">
                 <blockquote class="card-blockquote">
-                  <p>
-                    <div class="row">
-                      <div class="mb-4">Telefono: </div>
-                      <div class="mb-4"> (614) 413-5450 Ext. 3802</div>
-                    </div>
-                    <div class="row">
-                      <div class="mb-4">Correo: </div>
-                      <div class="mb-4">
-                        <a href="mailto:bcanas@uach.mx"> bcanas@uach.mx</a>
-                      </div>
-                    </div>
-                  </p>
+                  <p>Telefono: (614) 413-5450 Ext. 3802</p>
+                  <p>Correo: <a href="mailto:bcanas@uach.mx"> bcanas@uach.mx</a></p>
                 </blockquote>
               </div>
             </div>
@@ -107,18 +97,8 @@
               </div>
               <div class="card-block">
                 <blockquote class="card-blockquote">
-                  <p>
-                    <div class="row">
-                      <div class="mb-4">Correo: </div>
-                      <div class="mb-4">
-                        <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="mb-4">Facebook:</div>
-                      <div class="mb-4">------</div>
-                    </div>
-                  </p>
+                  <p>Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a>
+                  <p>Facebook: ------</p>
                 </blockquote>
               </div>
             </div>
