--- a/contact.html
+++ b/contact.html
@@ -85,8 +85,8 @@
               </div>
               <div class="card-block">
                 <blockquote class="card-blockquote">
-                  <p class="mb-3 text-heading text-muted text-lg">Telefono: (614) 413-5450 Ext. 3802</p>
-                  <p class="mb-3 text-heading text-muted text-lg">Correo: <a href="mailto:bcanas@uach.mx"> bcanas@uach.mx</a></p>
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Telefono: (614) 413-5450 Ext. 3802</p>
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:bcanas@uach.mx"> bcanas@uach.mx</a></p>
                 </blockquote>
               </div>
             </div>
