--- a/contact.html
+++ b/contact.html
@@ -97,8 +97,8 @@
               </div>
               <div class="card-block">
                 <blockquote class="card-blockquote">
-                  <p class="mb-3 text-heading text-muted text-lg">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a>
-                  <p class="mb-3 text-heading text-muted text-lg">Facebook: ------</p>
+                  <p class="mb-3 text-heading text-muted text-lg">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
+                  Facebook: ------</p>
                 </blockquote>
               </div>
             </div>
