--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
               </div>
               <div class="card-block">
                 <blockquote class="card-blockquote">
-                  <p class="mb-3 text-heading text-muted text-lg">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
                   Facebook: ------</p>
                 </blockquote>
               </div>
