--- a/galeria.html
+++ b/galeria.html
@@ -74,8 +74,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/1x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Estudiantes de la Licenciatura en la Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -84,8 +84,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/1x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Día de Muertos, año 2014</small>
                 </h4>
               </div>
             </div>
@@ -94,8 +94,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/1x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Mesa panel dentro de la Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -107,8 +107,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/2x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Inauguración en le Semana del Humanismo.</small>
                 </h4>
               </div>
             </div>
@@ -117,8 +117,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/2x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Ajedrez en la Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -127,8 +127,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/2x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Festejo del Día del Historiador, año 2017</small>
                 </h4>
               </div>
             </div>
@@ -140,8 +140,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/3x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Exposición de trabajos de investigación, año 2013</small>
                 </h4>
               </div>
             </div>
@@ -150,8 +150,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/3x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>IV Congreso Regional de estudiantes de Historia</small>
                 </h4>
               </div>
             </div>
@@ -160,8 +160,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/3x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>ENEH Aguascalientes</small>
                 </h4>
               </div>
             </div>
@@ -173,8 +173,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/4x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>EREH en Tijuana</small>
                 </h4>
               </div>
             </div>
@@ -183,8 +183,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/4x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>XXXVIII Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -193,8 +193,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/4x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Despedida de la segunda generación de Historia</small>
                 </h4>
               </div>
             </div>
@@ -206,8 +206,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/5x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Mesa panel Historia ¿y después qué?</small>
                 </h4>
               </div>
             </div>
@@ -216,8 +216,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/5x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small> Ex alumnos en la Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -226,8 +226,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/5x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Mesa Panel en la Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -239,8 +239,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/6x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>XXXVIII Semana del Humanismo, año 2016</small>
                 </h4>
               </div>
             </div>
@@ -249,8 +249,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/6x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>RECHIHO en la XXXVIII Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -259,8 +259,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/6x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Docentes de la licenciatura en la XXXVII Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -272,8 +272,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/7x1.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Actividad en Semana del Humanismo</small>
                 </h4>
               </div>
             </div>
@@ -282,8 +282,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/7x2.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Jesús Vargas en el Congreso Nacional de Historia</small>
                 </h4>
               </div>
             </div>
@@ -292,8 +292,8 @@
             <div class="card h-100">
               <img class="card-img-top" src="img/7x3.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">
+                  <small>Viaje dentro del IV EREH</small>
                 </h4>
               </div>
             </div>
@@ -307,7 +307,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Colectivo CHIC 2017</p>
       </div>
     </footer>
 
