--- a/historiadores.html
+++ b/historiadores.html
@@ -146,11 +146,69 @@
         <hr class="divider">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/slide-2.jpg" alt="">
+            <img class="img-fluid mb-4 mb-lg-0" src="img/Facultad.jpg" alt="">
           </div>
-          <div class="col-lg-6">
-            <p class="text-heading text-muted text-lg">Datos de archivos 1</p>
-            <p class="text-heading text-muted text-lg">Datos de archivos 2</p>
+          <div class="col-lg-6 text-center">
+            <div class="card my-4">
+              <div class="card-header">
+                <h5 class="mb-0"><strong>Archivo Histórico del Estado de Chihuahua</strong></h5>
+              </div>
+              <div class="card-block">
+                <blockquote class="card-blockquote">
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Av. División del Norte, esq. Universidad s/n<br>
+                  Altavista<br>
+                  CP 31200, Chihuahua, Chihuahua</p>
+                </blockquote>
+              </div>
+            </div>
+            <div class="card my-4">
+              <div class="card-header">
+                <h5 class="mb-0"><strong>Archivo General de Notarías del Estado de Chihuahua</strong></h5>
+              </div>
+              <div class="card-block">
+                <blockquote class="card-blockquote">
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Av. Venustiano Carranza, número 803, edificio Héroes de la Revolución, planta baja<br>
+                  Centro<br>
+                  CP 31000, Chihuahua, Chihuahua</p>
+                </blockquote>
+              </div>
+            </div>
+            <div class="card my-4">
+              <div class="card-header">
+                <h5 class="mb-0"><strong>Archivo del H. Congreso del Estado de Chihuahua</strong></h5>
+              </div>
+              <div class="card-block">
+                <blockquote class="card-blockquote">
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Palacio Legislativo, Libertad número 9<br>
+                  Centro<br>
+                  CP 31000, Chihuahua, Chihuahua</p>
+                </blockquote>
+              </div>
+            </div>
+            <div class="card my-4">
+              <div class="card-header">
+                <h5 class="mb-0"><strong>Archivo Municipal de Chihuahua, Chihuahua</strong></h5>
+              </div>
+              <div class="card-block">
+                <blockquote class="card-blockquote">
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Avenida Teófilo Borunda Norte No.1617<br>
+                  Centro<br>
+                  CP 31000, Chihuahua, Chihuahua</p>
+                </blockquote>
+              </div>
+            </div>
+            <div class="card my-4">
+              <div class="card-header">
+                <h5 class="mb-0"><strong>Archivo Histórico del Supremo Tribunal de Justicia del Estado de Chihuahua</strong></h5>
+              </div>
+              <div class="card-block">
+                <blockquote class="card-blockquote">
+                  <p class="mb-3 text-heading text-muted text-lg p-4">Paseo Bolivar 800<br>
+                  Centro Histórico<br>
+                  CP 31000, Chihuahua, Chihuahua</p>
+                </blockquote>
+              </div>
+            </div>
           </div>
         </div>
       </div>
