--- a/historiadores.html
+++ b/historiadores.html
@@ -146,7 +146,9 @@
         <hr class="divider">
         <div class="row">
           <div class="col-lg-6">
-            <img class="img-fluid mb-4 mb-lg-0" src="img/Facultad.jpg" alt="">
+            <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/Facultad.jpg" alt="">
+            <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/Facultad1.jpg" alt="">
+            <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/Facultad2.jpg" alt="">
           </div>
           <div class="col-lg-6 text-center">
             <div class="card my-4">
