--- a/contact.html
+++ b/contact.html
@@ -72,8 +72,8 @@
         <hr class="divider">
         <div class="row">
           <div class="col-lg-8">
-            <div class="embed-responsive embed-responsive-16by9 map-container mb-4 mb-lg-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.154822814555!2d-106.09065864970484!3d28.655082582322496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86ea43153097ecd7%3A0x7b5e545ba9f3c9f3!2sFaculty+Of+Philosophy+And+Literature!5e0!3m2!1sen!2smx!4v1511239909694" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <div class="embed-responsive embed-responsive-16by9 map-container mb-4 mb-lg-0 my-4">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3501.154822814555!2d-106.09065864970484!3d28.655082582322496!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86ea43153097ecd7%3A0x7b5e545ba9f3c9f3!2sFaculty+Of+Philosophy+And+Literature!5e0!3m2!1sen!2smx!4v1511239909694" width="600" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="col-lg-4">
