--- a/contact.html
+++ b/contact.html
@@ -99,6 +99,9 @@
                 <blockquote class="card-blockquote">
                   <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
                   Facebook: ------</p>
+                  <a class="btn btn-social-icon btn-twitter">
+                    <span class="fa fa-twitter"></span>
+                  </a>
                 </blockquote>
               </div>
             </div>
