--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/business-casual.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
   </head>
@@ -99,9 +100,7 @@
                 <blockquote class="card-blockquote">
                   <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
                   Facebook: ------</p>
-                  <a class="btn btn-social-icon btn-twitter">
-                    <span class="fa fa-twitter"></span>
-                  </a>
+                  <i class="fa fa-github" style="font-size:36px"></i>
                 </blockquote>
               </div>
             </div>
