--- a/contact.html
+++ b/contact.html
@@ -100,11 +100,29 @@
                 <blockquote class="card-blockquote">
                   <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
                   Facebook: ------</p>
-                  <i class="fa fa-github" style="font-size:36px"></i>
                 </blockquote>
               </div>
             </div>
         
+          </div>
+        </div>
+      </div>
+      
+      <div class="bg-faded p-4 my-4">
+        <hr class="divider">
+        <h2 class="text-center text-lg text-uppercase my-0">
+          <strong>Creador</strong>
+        </h2>
+        <hr class="divider">
+        <div class="card">
+          <div class="card-header">
+            Juan Daniel Morales
+            <i class="fa fa-github" href="https://github.com/DanielMorales090996" style="font-size:36px;color:red"></i>
+          </div>
+          <div class="card-body">
+            <h4 class="card-title">Special title treatment</h4>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
