--- a/contact.html
+++ b/contact.html
@@ -116,13 +116,12 @@
         <hr class="divider">
         <div class="card">
           <div class="card-header">
-            Juan Daniel Morales
-            <i class="fa fa-github" href="https://github.com/DanielMorales090996" style="font-size:36px;color:red"></i>
+            <h5 class="mb-0"><strong>Juan Daniel Morales</strong></h5>   |
+            <a href="https://github.com/DanielMorales090996"><i class="fa fa-github" style="font-size:36px;color:gray"></i></a>|
           </div>
           <div class="card-body">
             <h4 class="card-title">Special title treatment</h4>
             <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
