--- a/index.html
+++ b/index.html
@@ -127,7 +127,9 @@
           <strong>Eventos Relevantes</strong>
         </h2>
         <hr class="divider">
-        <p>(En este apartado incluiré el calendario en la siguiente actualización)</p>
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/1.jpg" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/2.jpg" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/3.jpg" alt="">
       </div>
 
     </div>
