--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
           <strong>Eventos Relevantes</strong>
         </h2>
         <hr class="divider">
-        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/1.jpg" alt="">
-        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/2.jpg" alt="">
-        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/3.jpg" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/1.png" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/2.png" alt="">
+        <img class="img-fluid rounded mb-4 mb-lg-0 my-4" src="img/3.png" alt="">
       </div>
 
     </div>
