--- a/galeria.html
+++ b/galeria.html
@@ -298,6 +298,38 @@
               </div>
             </div>
           </div>
+          
+          <div class="row my-4">
+          <div class="col-md-4 mb-4 mb-md-0">
+            <div class="card h-100">
+              <img class="card-img-top" src="img/8x1.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-title m-0">
+                  <small>Alumnos y maestros trabajando en conjunto</small>
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-4 mb-md-0">
+            <div class="card h-100">
+              <img class="card-img-top" src="img/8x2.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-title m-0">
+                  <small>Presentacion de trabajos finales 2017</small>
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100">
+              <img class="card-img-top" src="img/8x3.jpg" alt="">
+              <div class="card-body text-center">
+                <h4 class="card-title m-0">
+                  <small>Docentes de la Licenciatura en Historia</small>
+                </h4>
+              </div>
+            </div>
+          </div>
         </div>
         
       </div>
