--- a/about.html
+++ b/about.html
@@ -590,11 +590,11 @@
                               <h4 class="card-title">Marco Antonio Gutiérrez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Historia por parte de la Universidad Autónoma de Chihuahua</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD9" aria-expanded="false" aria-controls="collapseExampleD9">
                                   Más Información...
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseExampleD1">
+                              <div class="collapse" id="collapseExampleD9">
                                 <div class="card card-body text-heading text-muted text-lg">
                                   Actualmente está en proceso de titulación de la maestría en educación superior. Ha participado en diversos encuentros como el de Turismo cultural organizados por el Instituto Duranguense de la Cultura en la Ciudad de Durango. Actualmente es director de Radio Universidad. Como docente ha impartido las materias de Historia de la Psicología en el Instituto de Ciencias y Humanidades. Como docente de la Universidad Autónoma de Chihuahua, imparte las clases de Instrumentación Didáctica y Praxis Educativa. Sus líneas de investigación son los museos y gestión cultural, abarcando todo lo que implica la animación cultural. 
                                 </div>
@@ -609,11 +609,11 @@
                               <h4 class="card-title">Sandra Treviño</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciada en Ciencias de la Información por la Facultad de Filosofía y Letras de la UACH</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD2" aria-expanded="false" aria-controls="collapseExampleD2">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD10" aria-expanded="false" aria-controls="collapseExampleD10">
                                   Más Información...
                                 </a>
                               </p>
-                              <div class="collapse" id="collapseExampleD2">
+                              <div class="collapse" id="collapseExampleD10">
                                 <div class="card card-body text-heading text-muted text-lg">
                                   Cuenta con la maestría en Bibliotecología en Ciencias de la Informacion, también por parte de la UACH. Ha participado en cursos como Estrategia de Vinculación y Evaluación por competencias así como en el foro de historia: “A 50 años del asalto al cuartel Madera”. Actualmente es Jefe de Unidad Servicio Social y Vinculación. Las materias que imparte en la licenciatura en Historia son: Planificación y Administración Cultural y Diseño y Evaluación de Proyectos.
                                 </div>
@@ -724,7 +724,7 @@
                             <div class="card text-center">
                               <div class="card-header">
                                 <div class="embed-responsive embed-responsive-16by9">
-                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/mx4bbq5_PQc?rel=0" frameborder="0" allowfullscreen></iframe>
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/RP5SOoAl754?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                               </div>
                               <div class="card-body">
