--- a/about.html
+++ b/about.html
@@ -723,8 +723,11 @@
                             
                             <div class="card text-center">
                               <div class="card-header">
-                                <div class="embed-responsive embed-responsive-16by9">
+                                <div style="border-radius: 6px;" class="embed-responsive embed-responsive-16by9 my-4">
                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/RP5SOoAl754?rel=0" frameborder="0" allowfullscreen></iframe>
+                                </div>
+                                <div style="border-radius: 6px;" class="embed-responsive embed-responsive-16by9 my-4">
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/D2Ft2FioN5M?rel=0" frameborder="0" allowfullscreen></iframe>
                                 </div>
                               </div>
                               <div class="card-body">
