--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
               <div class="card-block">
                 <blockquote class="card-blockquote">
                   <p class="mb-3 text-heading text-muted text-lg p-4">Correo: <a href="mailto:lichistoriauach@gmail.com"> lichistoriauach@gmail.com</a><br>
-                  Facebook: ------</p>
+                  Facebook: <a href="https://www.facebook.com/Colectivo-Hist%C3%B3rico-383798235387056/?modal=admin_todo_tour"> Colectivo Histórico</a></p>
                 </blockquote>
               </div>
             </div>
