--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,9 @@
 
             <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
-                (Temporalmente vacío, se anexarán publicaciónes con el tiempo.)
+                <div style="border-radius: 6px;" class="embed-responsive embed-responsive-16by9 my-4">
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/0_AlpSTEKBQ?rel=0" frameborder="0" allowfullscreen></iframe>
+                </div>
               </div>
             </div>
           </div>
