--- a/about.html
+++ b/about.html
@@ -72,9 +72,11 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingOne">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
+                    <hr class="divider">
+                    <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
                       <strong>Historia</strong>
                     </a>
+                    <hr class="divider">
                   </h5>
                 </div>
                 <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -108,7 +110,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingTwo">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       <strong>Misión</strong> y <strong>Visión</strong>
                     </a>
                   </h5>
@@ -183,7 +185,7 @@
               <div class="card">
                 <div class="card-header text-center" role="tab" id="headingThree">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
                   </h5>
@@ -405,7 +407,7 @@
               <div class="card">
                 <div class="card-header text-center" role="tab" id="headingFour">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       Planta <strong>Docente</strong>
                     </a>
                   </h5>
@@ -664,7 +666,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFive">
                   <h5 class="mb-0">
-                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                       <strong>Testimonios</strong>
                     </a>
                   </h5>
