--- a/about.html
+++ b/about.html
@@ -110,9 +110,11 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingTwo">
                   <h5 class="mb-0">
+                    <hr class="divider">
                     <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       <strong>Misión</strong> y <strong>Visión</strong>
                     </a>
+                    <hr class="divider">
                   </h5>
                 </div>
                 <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
@@ -185,9 +187,11 @@
               <div class="card">
                 <div class="card-header text-center" role="tab" id="headingThree">
                   <h5 class="mb-0">
+                    <hr class="divider">
                     <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
+                    <hr class="divider">
                   </h5>
                 </div>
                 <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion">
@@ -407,9 +411,11 @@
               <div class="card">
                 <div class="card-header text-center" role="tab" id="headingFour">
                   <h5 class="mb-0">
+                    <hr class="divider">
                     <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       Planta <strong>Docente</strong>
                     </a>
+                    <hr class="divider">
                   </h5>
                 </div>
                 <div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion">
@@ -666,9 +672,11 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFive">
                   <h5 class="mb-0">
+                    <hr class="divider">
                     <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                       <strong>Testimonios</strong>
                     </a>
+                    <hr class="divider">
                   </h5>
                 </div>
                 <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion">
