--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
           <div class="card">
             <div class="card-header text-center" role="tab" id="headingOne">
               <h5 class="mb-0">
-                <a style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                <a class="text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   <strong>Publicaciones</strong> de Alumnos y Egresados
                 </a>
               </h5>
@@ -85,7 +85,7 @@
           <div class="card">
             <div class="card-header text-center" role="tab" id="headingTwo">
               <h5 class="mb-0">
-                <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   <strong>Cuestiones base</strong> de la Licenciatura
                 </a>
               </h5>
@@ -99,7 +99,7 @@
           <div class="card">
             <div class="card-header text-center" role="tab" id="headingThree">
               <h5 class="mb-0">
-                <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                <a class="collapsed text-uppercase" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Datos <strong>Curiosos</strong>
                 </a>
               </h5>
